--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,5 @@
 [submodule "crates/recast-detour-sys/recast/recastnavigation"]
 	path = crates/recast-detour-sys/recast/recastnavigation
-	url = https://github.com/recastnavigation/recastnavigation.git
+	url = https://github.com/taiyoungjang/recastnavigation.git
 	ignore = dirty
+	branch = recast-detour
