--- a/crates/recast-detour-rs/Cargo.toml
+++ b/crates/recast-detour-rs/Cargo.toml
@@ -14,4 +14,4 @@ insta = "0.7.4"
 rand = "0.6.5"
 
 [dependencies]
-sys = { version = "0.1.1", package = "recast-detour-sys" }
+sys = { path = "../recast-detour-sys", package = "recast-detour-sys" }
